Add railway backend

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,14 @@
       "use": "@vercel/static"
     },
     {
+      "src": "blog.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "blog/**/*.html",
+      "use": "@vercel/static"
+    },
+    {
       "src": "*.png",
       "use": "@vercel/static"
     }
@@ -20,7 +28,15 @@
       "destination": "/generator.html"
     },
     {
-      "source": "/((?!.*\\.png$|^generator$).*)",
+      "source": "/blog",
+      "destination": "/blog.html"
+    },
+    {
+      "source": "/blog/(.*)",
+      "destination": "/blog/$1"
+    },
+    {
+      "source": "/((?!.*\\.png$|^generator$|^blog$).*)",
       "destination": "/index.html"
     }
   ],
