--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "echo 'No build step needed'",
-    "migrate": "node src/migrate.js"
+    "migrate": "node src/migrate.js",
+    "railway:start": "npm run migrate && npm start"
   },
   "dependencies": {
     "express": "^4.18.2",
