--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
       "use": "@vercel/static"
     },
     {
+      "src": "terms.html",
+      "use": "@vercel/static"
+    },
+    {
       "src": "*.png",
       "use": "@vercel/static"
     }
