Fix Railway deployment configuration and backend issues

--- a/vercel.json
+++ b/vercel.json
@@ -30,15 +30,7 @@
     {
       "source": "/blog",
       "destination": "/blog.html"
-    },
-    {
-      "source": "/terms",
-      "destination": "/terms.html"
-    },
-    {
-      "source": "/((?!.*\\.png$|^generator$|^blog$|^terms$).*)",
-      "destination": "/index.html"
     }
   ],
-  "cleanUrls": true
+  "cleanUrls": false
 }
