Fix Railway deployment configuration and backend issues

--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,10 @@
     {
       "source": "/blog",
       "destination": "/blog.html"
+    },
+    {
+      "source": "/((?!.*\\.png$|^generator$|^blog$).*)",
+      "destination": "/index.html"
     }
   ],
   "cleanUrls": false
