--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,15 @@
       "destination": "/generator.html"
     },
     {
+      "source": "/generator/",
+      "destination": "/generator.html"
+    },
+    {
       "source": "/blog",
+      "destination": "/blog.html"
+    },
+    {
+      "source": "/blog/",
       "destination": "/blog.html"
     },
     {
