--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express-basic-auth": "^1.2.1",
     "express-validator": "^7.0.1",
     "slugify": "^1.6.6",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
