Add resend email integration

--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,10 @@
       "use": "@vercel/static"
     },
     {
+      "src": "robots.txt",
+      "use": "@vercel/static"
+    },
+    {
       "src": "*.png",
       "use": "@vercel/static"
     }
